raw/syntex-0.42.2@000-base--2017-01-10-23-31-20--1.log
commit e57f061be20666eb0506f6f41551c798bbb38b60
Merge: e4fee52 04e4a60
Author: bors <bors@rust-lang.org>
Date:   Wed Jan 11 05:27:11 2017 +0000

    Auto merge of #38916 - estebank:pad-suggestion-list, r=nikomatsakis
    
    Teach diagnostics to correct margin of multiline messages
    
    Make the suggestion list have a correct padding:
    
    ```
    error[E0308]: mismatched types
     --> file.rs:3:20
      |
    3 |     let x: usize = "";
      |                    ^^ expected usize, found reference
      |
      = note: expected type `usize`
      = note:    found type `&'static str`
      = help: here are some functions which might fulfill your needs:
              - .len()
              - .foo()
              - .bar()
    ```
rustc 1.15.0-nightly (daf8c1dfc 2016-12-05)
-rwxr-xr-x 1 root root 9432 Dec  6 15:39 /usr/local/bin/rustc
rustc: ./syntex-0.42.2@000-base
cargo rustc -p syntex_syntax  -- -Ztime-passes -Zinput-stats
makefile:7: recipe for target 'all@000-base' failed
done
